# tradingbot22-tradingbots-prefect

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  buildPush.sh  docker-compose.yaml  headAndShoulderFlowGit-deployment.yaml  mainFlow-deployment.yaml  prefect.yaml  prefectAddDeployment.sh  prefectConv.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
deact/: databaseBackup.py  deployAndRun.sh  pairtrade_glri_vstm.py  pairtrade_uboh_glri.py
flows/: addAllFlows.py  ai_investing_website.py  alphavantageUpdate.py  backtest_headshoulder_sharpemix_results.json  bt_headandshouldersAAPLMaxRet.py  bt_headandshouldersSharpeoptMixed.py  comp_bigtechmom.py  comp_bondtqqq.py  comp_buydips_adapted.py  comp_buydips_explored.py  comp_buydips_orig.py  comp_buydips_shorting.py  comp_notboring.py  databaseBackup.py  deployAndRun.sh  finnhub_recommendations.py  headShoulderPrefect.py  momentum_pvo_signal_msft.py  msftDecisionTree.py  msftDecisionTreeModel.pkl  newstrader.py  pairTrade.py  portoflioworthUpdate.py  randombot.py  xgb_sharpeopt_trenddet.py
flows/headAndShoulders/: headShoulderPrefect.py
gitflow/: headshoulder.py
kubernetes/: prefect-agent-deployment.yaml  prefect-agent-sealedsecret.yaml
tradingbot-website-generator/: README.md
tradingbot-website-generator/hugo/: hugo_stats.json
tradingbot-website-generator/hugo/config/_default/: hugo.toml  languages.toml  menus.de.toml  menus.en.toml  params.toml
tradingbot-website-generator/hugo/content/english/: _index.md  about.md  contact.md  how-it-works.md  imprint.md  pricing.md  privacy-policy.md  top.md
tradingbot-website-generator/hugo/content/english/author/: justin-guese.md
tradingbot-website-generator/hugo/content/english/blog/: _index.md  c-bigtech-momentum.md  c-bonds-and-nsdq.md  c-commodium-momentum.md  c-largecap-volume.md  c-merged.md  c-nsdq-adapted.md  c-nsdq-explored.md  (+39 more)
tradingbot-website-generator/hugo/content/german/: _index.md
tradingbot-website-generator/hugo/deactivated/: home-2.md  pricing.md
tradingbot-website-generator/hugo/i18n/: en.yaml
tradingbot-website-generator/src/: addFlowToPrefect.py  blogTemplate.md  createNews.py  db.py  getBotData.py  hugofy.py  newsTemplate.md  top.py  topTemplate.md
xgboost-trend-sharpeopt/: ABBV.model  BSX.model  COST.model  FANG.model  IBM.model  LLY.model  NVDA.model  VZ.model  WM.model  WMT.model  helpers.py  myvwtcnasdaq.parquet  toInvest.csv  train.py
(+259 files in other folders)
