[tool.poetry]
name = "tradingbot22-tradingbots-prefect"
version = "0.1.0"
description = ""
authors = ["Justin Guese <guese.justin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
requests = "^2.31.0"
prefect = "^2.14.12"
pandas = "^2.1.4"
tradingpattern = "^0.0.5"
yfinance = "^0.2.33"
tqdm = "^4.66.1"
finnhub-python = "^2.4.19"
ta = "^0.11.0"
pyportfolioopt = "^1.5.5"
scikit-learn = "^1.3.2"
quantstats = "^0.0.62"
psycopg2-binary = "^2.9.9"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
sqlalchemy = "^2.0.24"
pydantic = "^2.5.3"
backtesting = "^0.3.3"
basebot22-basebot-JustinGuese = "^0.3.43"
prefect-gitlab = "^0.2.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
